<resources>
    <string name="app_name">eDIS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="register_btn">REGISTER</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="landmark_hint">where do you leave?</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_view_pager">Owner Registration</string>
    <string name="PersonalDetailsTitle">Personal</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="information_photo">Photo/Image Information</string>
    <string name="full_image">View Full Photo/Image</string>
    <string name="rotate_picture">Rotate Photo/Image 90º</string>
    <string name="marital_status_prompt">Marital status</string>
    <string name="disabilities_status_prompt">Disabilities</string>
    <string name="go_to_fragment">Next to fragment</string>
    <string name="title_activity">Activity Example Magical Camera</string>
    <string name="go_to_activity">Back to Activity</string>
    <string name="title_fragment">Fragment Example Magical Camera</string>
    <string name="version">Version Library 5.0.5</string>
    <string name="menu_shared">Shared</string>
    <string name="menu_about">About Developers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_github">Github</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_documentation">Documentation</string>
    <string name="menu_todo_list">TODO List</string>
    <string name="menu_terms_conditions">Terms and Conditions</string>
    <string name="link_git">https://github.com/fabian7593/MagicalCamera</string>
    <string name="link_donate">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=L25MKCRPR7TWY</string>
    <string name="link_todo">https://github.com/fabian7593/MagicalCamera/projects/1</string>
    <string name="link_documentation">https://github.com/fabian7593/MagicalCamera/blob/master/README.md</string>
    <string name="link_play_store">https://play.google.com/store/apps/details?id=com.frosquivel.examplemagicalcamera</string>
    <string name="link_terms_and_conditions">https://drive.google.com/file/d/0B0NuDXZebVUGMVFpc2FsZFEwYmM/view</string>
    <string name="dev_creator">MagicalCamera creator</string>
    <string name="dev_name_creator">Fabián Rosales (Frosquivel Developer)</string>
    <string name="dev_image_creator">https://avatars3.githubusercontent.com/u/13343461?v=3&amp;s=460</string>
    <string name="dev_description">Magical camera creator, I do the take camera, select photo, rotate picture, convert bitmap, facial recognition, save picture, get information and others...</string>
    <string name="dev_link_git_creator">https://github.com/fabian7593</string>
    <string name="dev_link_git_contributor_1">https://github.com/arthursz</string>
    <string name="dev_link_git_contributor_2">https://github.com/cutiko</string>
    <string name="dev_contributor">MagicalCamera contributors</string>
    <string name="dev_name_contributor_1">Arthur Zettler</string>
    <string name="dev_image_contributor_1">https://avatars2.githubusercontent.com/u/6000680?v=3&amp;s=460</string>
    <string name="dev_desc_contributor_1">Arthur create the return path of the image saved like a String</string>
    <string name="dev_name_contributor_2">Erick Navarro</string>
    <string name="dev_image_contributor_2">https://avatars3.githubusercontent.com/u/6012585?v=3&amp;s=460</string>
    <string name="dev_desc_contributor_2">Erick Add a best usage of google play library, and he develop the better usage of permissions, and an excellent code refactor for permission class and other components.</string>
    <string name="message_save_manual">The photo is save manual in device, please check this path: </string>
    <string name="message_see_photo_information">See photo information</string>
    <string name="convert_to_string_base_64_title">View String base 64, only shown 300 string lenght for this example.</string>
    <string name="convert_to_string_base_64">Convert to String base 64</string>
    <string name="message_ok">Ok</string>
    <string name="info_data_latitude">Latitude: </string>
    <string name="info_data_latitude_referene">Latitude Reference: </string>
    <string name="info_data_longitude">Longitude: </string>
    <string name="info_data_longitude_reference">Longitude Reference: </string>
    <string name="info_data_date_time_photo">Date time to photo: </string>
    <string name="info_data_date_stamp_photo">Date stamp to photo: </string>
    <string name="info_data_ISO">ISO: </string>
    <string name="info_data_orientation_photo">Orientation photo: </string>
    <string name="info_data_image_lenght">Image lenght: </string>
    <string name="info_data_image_width">Image Width: </string>
    <string name="info_data_make_company">Make company: </string>
    <string name="info_data_model_device">Model Device: </string>
    <string name="email_subject">MagicalCamera 5.0.5 Android Library</string>
    <string name="email_title">Share MagicalCamera</string>
    <string name="email_text">Hello We are Magical Camera, \n\n I want to share with you this awesome library, for use the camera photos/pictures of android native. \n\n This is the best library Open source of this subject. \n\n View this library here. \n XXXX1 \n\n And download the app here: \n XXXX2</string>
    <string name="value_directory_name">Magical Camera</string>
    <string name="value_photo_name">MagicalCamera_test_photo_name</string>
    <string name="value_selected_picture">Select Picture</string>
    <string name="value_quality_picture">100</string>
    <string name="value_autoincrement_picture">True</string>
    <string name="value_facial_recognition_thick">50</string>
    <string name="value_facial_recognition_color">#0E477F</string>
    <string name="shared_photo_name">Photo Name</string>
    <string name="shared_directory_name">Directory Name</string>
    <string name="shared_title_popup">Title PopUp Select Picture</string>
    <string name="shared_quality_photo">Average quality photo</string>
    <string name="shared_type_extension">Type extension</string>
    <string name="shared_autoincrement">Autoincrement name picture</string>
    <string name="shared_line_thickness">Line Tickness of Face recognition</string>
    <string name="shared_preference_title">Configuration Preference</string>
    <string name="shared_accept">Ok</string>
    <string name="shared_cancel">Cancel</string>
    <string name="shared_change_color">Change Color</string>
    <string name="shared_hexadecimal_color">Line color FaceRecognition</string>
    <string name="image_down_quality">Press to down quality of the bitmap in runtime</string>
    <string name="shared_preference_extension_png">PNG</string>
    <string name="shared_preference_extension_jpg">JPEG</string>
    <string name="shared_preference_extension_webp">WEBP</string>
    <string name="error">Error!</string>
    <string name="error_image_null">Your image is null, please select or take one</string>
    <string name="error_not_connect">You Dont connect for feedback</string>
    <string name="error_not_save_feedback">You dont save feedback, please try again later</string>
    <string name="error_init_magicalcamera">Please initialized magical camera, maybe in static context for use in all activity</string>
    <string name="error_not_have_data">You dont have data to show because the real path photo is wrong, save your photo first</string>
    <string name="error_dont_save_photo">Sorry your photo dont save in devide, please make sure you have write permissions.</string>
    <string name="error_not_detect_face">The library not detect any face in the picture</string>
    <string name="error_string_base_64">The String base 64 is too big, please try again with a lower quality image</string>
    <string name="note_fragment">NOTE: This changes only be reflect into Activity Example, the fragment example will have a basic configuration</string>
    <string name="feedback">FeedBacks</string>
    <string name="feedback_save">Save</string>
    <string name="feedback_save_message">Your feedback is save, thanks for your comments :)</string>
    <string name="feedback_not_save">Please fill all fields</string>
    <string name="feedback_select_comment">Select the option for feedback</string>
    <string name="feedback_write_comment">Write your comment</string>
    <string-array name="feedbacks">
        <item>FeedBacks</item>
        <item>Issues</item>
        <item>New Ideas</item>
    </string-array>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_name_hint">Other name</string>
    <string name="dob_hint">Date of birth</string>
    <string name="picture_title">Owner Photo</string>
    <string name="choose">Choose</string>
    <string name="phone_number">Phone number</string>
    <string name="postal_address_hint">Postal address</string>
    <string name="district_hint">District</string>
    <string name="language_textview">Language</string>
    <string name="what3word_api_key">INYQYMPC</string>
    <string name="error_incorrect_password">wrong password</string>
    <string name="country_hint">Enter Country</string>
    <string name="place_of_birth_hint">Place of Birth</string>
    <string name="language_spoken_hint">Language spoken</string>
    <string name="language_written_hint">Language written</string>
    <string name="btnRemove">remove</string>
    <string name="btnAdd">Add</string>
    <string name="your_facebook_username_hint">facebook username</string>
    <string name="whatsapp_hint">whatsapp number</string>
    <string name="your_twitter_username_hint"> twitter username</string>
    <string name="your_instagram_account_hint"> instagram account</string>
    <string name="workplace_hint">Workplace or Employer\' name</string>
    <string name="your_profession_hint">Profession</string>
    <string name="your_position_hint"> position</string>
    <string name="location_of_workplace_hint">location of workplace</string>
    <string name="string_others">Others</string>
    <string name="other_disabilty_hint">enter disability</string>
    <string name="input_prefill"> </string>
    <string name="string_other_disability">Other disability</string>
    <string name="add_extra_language_hint">add extra language</string>
    <string name="enter_language_hint">Enter Language</string>
    <string name="fullname_hint">Fullname</string>
    <string name="phone_hint">Phone</string>
    <string name="city_hint">City</string>
    <string name="address_hint">Address</string>
    <string name="license_number_hint">license number</string>
    <string name="property_type_hint">Property Type</string>
    <string name="property_classification_hint">Classification</string>
    <string name="property_identification_numbers_hint">Property Identification Number</string>
    <string name="ownership_status_hint">Ownership Status</string>
    <string name="registered_hint">Registered?</string>
    <string name="title_registration_number_hint">Title Registration Number</string>
    <string name="electricity_source_hint">Electricity Source</string>
    <string name="identure_number_hint">Identure Number</string>
    <string name="yes_choice">Yes</string>
    <string name="no_choice">No</string>
    <string name="number_of_family_units_within_building_hint">Number of Units within Building</string>
    <string name="postal_address_int">Postal Address or landmark</string>
    <string name="login_btn">Login</string>
    <string name="password">Enter password</string>
</resources>