<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.steve.housing.views.fragment.SocialMediaDetailsFormFragment">


    <EditText
        android:id="@+id/editTextFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_facebook_username_hint"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:id="@+id/editTextWhatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextFacebook"
        android:layout_below="@+id/editTextFacebook"
        android:layout_marginTop="16dp"
        android:hint="@string/whatsapp_hint"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_twitter_username_hint"
        android:layout_below="@+id/editTextWhatsapp"
        android:layout_alignStart="@+id/editTextWhatsapp" />

    <EditText
        android:id="@+id/editTextInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextTwitter"
        android:layout_below="@+id/editTextTwitter"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_instagram_account_hint" />
</RelativeLayout>
