<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.steve.housing.views.fragment.PersonalDetailsFormFragment">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_owner"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="owner picture"
        android:cropToPadding="false"
        android:src="@drawable/ic_cam"
        android:visibility="visible"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/editTextFname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_owner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextOname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextLname"
        android:layout_below="@+id/editTextLname"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/other_name_hint"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerMaritalStatus"
        android:prompt="@string/marital_status_prompt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextOname"
        android:layout_below="@+id/editTextOname"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerDisabilities"
        android:prompt="@string/disabilities_status_prompt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinnerMaritalStatus"
        android:layout_alignEnd="@+id/editTextOname" />


</RelativeLayout>


