<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.steve.housing.views.fragment.ContactDetailsFormFragment">


    <EditText
        android:id="@+id/editTextOwnerPhoneNumber"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="phone"
        android:hint = "@string/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="42dp"
        app:layout_constraintHorizontal_bias="0.527"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/editTextOwnerEmail"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextOwnerPhoneNumber" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/postal_address_hint"
        android:inputType="textPostalAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextOwnerEmail" />

    <EditText
        android:id="@+id/editTextOwnerDistrict"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/district_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.503" />
</android.support.constraint.ConstraintLayout>


