<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.steve.housing.views.fragment.PropertyFormExtraDetailsFormFragment">


    <EditText
        android:id="@+id/editTextNumberOfUnits"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="8"
        android:hint="@string/number_of_family_units_within_building_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextDistrict"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/district_hint"
        android:layout_below="@+id/editTextNumberOfUnits"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextPropertyAddress"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDistrict"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/postal_address_int"
        android:inputType="textPostalAddress" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPropertyAddress"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />
</RelativeLayout>
