<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.steve.housing.views.fragment.AgentPropertyDetailsFormFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAgentName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPManagerName"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/fullname_hint"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAgentPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutAgentName"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutAgentName"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAgentName">

        <EditText
            android:id="@+id/editTextPropertyManagerPhone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAgentEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutAgentPhone"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutAgentPhone"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAgentPhone">


        <EditText
            android:id="@+id/editTextPManagerEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAgentCity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutAgentEmail"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutAgentEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAgentEmail">

        <EditText
            android:id="@+id/editTextPManagerCity"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/textInputLayoutAgentAddress"
        app:srcCompat="@drawable/check"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAgentAddress"
        app:layout_constraintVertical_bias="0.77"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayoutAgentAddress"
        app:layout_constraintHorizontal_bias="0.975" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAgentAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAgentCity"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <EditText
            android:id="@+id/editTextPManagerAddress"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
